--- a/setup.yml
+++ b/setup.yml
@@ -4,6 +4,10 @@ Parameters:
   CodePipelineBucket:
     Type: String
     Description: 'The S3 bucket for CodePipeline artifacts.'
+    
+  CloudFormationBucket:
+    Type: String
+    Description: 'The S3 bucket for CloudFormation templates.'
 
 Resources:
   CodePipelineS3Bucket:
@@ -11,6 +15,21 @@ Resources:
     DeletionPolicy: Retain
     Properties:
       BucketName: !Ref CodePipelineBucket
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+
+  CloudFormationS3Bucket:
+    Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    Properties:
+      BucketName: !Ref CloudFormationBucket
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
